Crash when switching to Mask mode with Locked track selected #46569

Closed
opened 2015-10-22 14:21:02 +02:00 by Antonio Buch · 5 comments

System InformationWindows 8.1
GeForce GTX TITAN Black
(Tested in other computer too)

Blender VersionBroken: 2.76 44f7dd6

Short description of error

If you have a track point selected with the locked feature active (by pressing L), Blender crashes when you change to Mask mode.

Steps for others to reproduce the error

  • Open a new Blender file
  • Load any image or video into the Movie Clip Editor
  • Create and place a new track point
  • Press L

Go to Mask Mode

**System Information**Windows 8.1 GeForce GTX TITAN Black (Tested in other computer too) **Blender Version**Broken: 2.76 44f7dd6 **Short description of error** If you have a track point selected with the locked feature active (by pressing L), Blender crashes when you change to Mask mode. **Steps for others to reproduce the error** - Open a new Blender file - Load any image or video into the Movie Clip Editor - Create and place a new track point - Press L # Go to Mask Mode
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @antoniobuch1

Added subscriber: @antoniobuch1
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by 9a6a3f5346

This issue was referenced by 9a6a3f5346d90ea4e3c302ce7f2c49a6598cebfe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46569
No description provided.