Fix T46569: Crash w/ mask & locked-track enabled